--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: ruby
 rvm:
-- 2.0.0
+  - 2.0.0
+after_success:
+  - git config --global user.email "builds@travis-ci.com"
+  - git config --global user.name "Travis CI"
+  - export GIT_TAG=CURRENT
+  - git tag -f $GIT_TAG -a -m "Generated tag from TravisCI build $TRAVIS_BUILD_NUMBER"
+  - git push origin $GIT_TAG --force
