--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 after_success:
   - "[ \"$TRAVIS_BRANCH\" == \"master\" ] && curl -v -X DELETE -u $GITHUB_USER:$GITHUB_PASSWORD \"https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs/tags/CURRENT\""
-  - "JSON='{\"ref\": \"refs/tags/CURRENT\", \"sha\": \"$TRAVIS_COMMIT\"}' ; [ \"$TRAVIS_BRANCH\" == \"master\" ] && curl -v -X POST -d ${JSON} --header \"Content-Type:application/json\" -u $GITHUB_USER:$GITHUB_PASSWORD \"https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs\""
+  - "JSON='{\"ref\": \"refs/tags/CURRENT\", \"sha\": \"$TRAVIS_COMMIT\"}' ; [ \"$TRAVIS_BRANCH\" == \"master\" ] && curl -v -X POST -d {\"ref\": \"refs/tags/CURRENT\", \"sha\": \"$TRAVIS_COMMIT\"} --header \"Content-Type:application/json\" -u $GITHUB_USER:$GITHUB_PASSWORD \"https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs\""
 env:
   global:
     -
