Add ENVs to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
   - secure: KXYMCHWpbkfdIo25rfsq4DFyqBbSFaSXW1DYSpWhYA0rGxjZVdQ2l+1y0yqP9HCf1wrjYTJZfb5c35khKBBWPFzRas3HAqh6LGx/TynbVV7SjyiR2gmM1q3WBUiH2qCqJUoGgnY+0RCpPwKuYJNBHfcsZ7mBbnUOepcbkSqNl6U=
   - secure: RvFgRVnmls0mJx/szHgroW2W9nmXGPTl8U6D6GA9lqNh+dmXYkFLY+WlZT3hnW5twrAw+mJgoLBJBXPVWDluFVrVClIdePk4bXfJOE3+lfvSVAYlntLXBJAeQGgmII5VLmBfzXApXK9OugCdADvmqj7K9BWZGvx67VTD+bZtp8U=
   - secure: ZGjK2q+H+ZosqWS57hVB1WVcizfx9UxFE8nsmIAJMXpd3e+5OhZrR1KynFgV6fmqSr5A5edMSRs37Xl0TYC4ZtvPSCI1b1lIFbhrId9WoCOYLxmw/rbpl7+mmCw/HX426sFh5AiwFiUUwbOlm9BDSxw1vdM2IFaX7CMCkWz4GGU=
+  - secure: On5VLTv3O1ERkyzLzVC+iZVfUR44XwmJ3kLKLk8jh+48p0vhf0RGlRpwQRIqctpCYdXvZyLnOr5XbgbJ36G/daOY2/1aahI/1W786Vq2t0URFg8L/Ut2sBVqrN/ay1IUP6fOErd1yvm+J8+hajMVDFp6P1TVL4WX5tO5UTLbRDY=
+  - secure: bsxNCCsPgg7qHqSf0Zu22V015ghMvoFn9CLYNzmAsr8YtEp4EvxR4EUEAJk2qFKPJTqiE+k8gQ/dU2v0EKnFjqXgSeiTQO+JiGqP6qqgVf7Y8hUYkzjjF6I5pb6NothLznT1WEKljt89IeiJNCHoREbPgGub/EVkHxLRxxUD7hI=
 language: ruby
 rvm:
 - 2.0.0
