--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,10 @@ after_script:
 - bundle_cache
 notifications:
   irc: "irc.freenode.net#theodi"
+deploy:
+  provider: heroku
+  api_key:
+    secure: ee3jSrBVMbeyZgGdjUXtO9EEKpyNKTpUPhDfAA3VTeuSBTfSudj8K5oDCdISx4GmvPQqCSatGKnrvXMrde9ldwc+QqidS4ruXmrlr2yBhk6rPHKdNeF2FX6xvBn13A/ckQeeE7xJSIyzO5aR+xsM3SL+jFmnaoRwa9sdlBSgC8w=
+  app: forkbomb
+  on:
+    repo: theodi/forkbomb
