--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,4 @@ notifications:
     channels:
       - "irc.freenode.net#theodi"
     template:
-      - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
-      - "Change view : %{compare_url}"
-      - "Build details : %{build_url}"
+      - "%{repository} %{branch} - %{message} %{build_url}"
