--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,44 @@
-after_success:
-- '[ "$TRAVIS_BRANCH" == "master" ] && curl -v -X DELETE -u $GITHUB_USER:$GITHUB_PASSWORD
-  "https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs/tags/CURRENT"'
-- '[ "$TRAVIS_BRANCH" == "master" ] && curl -v -X POST -d ''{"ref":"refs/tags/CURRENT","sha":"''$TRAVIS_COMMIT''"}''
-  --header "Content-Type:application/json" -u $GITHUB_USER:$GITHUB_PASSWORD "https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs"'
-env:
-  global:
-  - BUNDLE_ARCHIVE="forkbomb"
-  - AWS_S3_BUCKET="theodi-travis-bundle-cache"
-  - AWS_S3_REGION="eu-west-1"
-  - RAILS_ENV=test
-  - secure: AgvXTDZdkWlbZ+hXYz/vwzZijN3Ss3zk5v889GqAbQVKBJoBqB24PjU4rf6/nCczxXPAYeZf6Blx6hkmLE9Wl/kBH6EhEkJFbi56MAM2kmskO7+gtWaFRv6olkXe3RPHN6rfU2bEmF+D7U/XsjzVDYgPZLRfe8bpYyiLcakct1Y=
-  - secure: KXYMCHWpbkfdIo25rfsq4DFyqBbSFaSXW1DYSpWhYA0rGxjZVdQ2l+1y0yqP9HCf1wrjYTJZfb5c35khKBBWPFzRas3HAqh6LGx/TynbVV7SjyiR2gmM1q3WBUiH2qCqJUoGgnY+0RCpPwKuYJNBHfcsZ7mBbnUOepcbkSqNl6U=
-  - secure: RvFgRVnmls0mJx/szHgroW2W9nmXGPTl8U6D6GA9lqNh+dmXYkFLY+WlZT3hnW5twrAw+mJgoLBJBXPVWDluFVrVClIdePk4bXfJOE3+lfvSVAYlntLXBJAeQGgmII5VLmBfzXApXK9OugCdADvmqj7K9BWZGvx67VTD+bZtp8U=
-  - secure: ZGjK2q+H+ZosqWS57hVB1WVcizfx9UxFE8nsmIAJMXpd3e+5OhZrR1KynFgV6fmqSr5A5edMSRs37Xl0TYC4ZtvPSCI1b1lIFbhrId9WoCOYLxmw/rbpl7+mmCw/HX426sFh5AiwFiUUwbOlm9BDSxw1vdM2IFaX7CMCkWz4GGU=
-  - secure: On5VLTv3O1ERkyzLzVC+iZVfUR44XwmJ3kLKLk8jh+48p0vhf0RGlRpwQRIqctpCYdXvZyLnOr5XbgbJ36G/daOY2/1aahI/1W786Vq2t0URFg8L/Ut2sBVqrN/ay1IUP6fOErd1yvm+J8+hajMVDFp6P1TVL4WX5tO5UTLbRDY=
-  - secure: bsxNCCsPgg7qHqSf0Zu22V015ghMvoFn9CLYNzmAsr8YtEp4EvxR4EUEAJk2qFKPJTqiE+k8gQ/dU2v0EKnFjqXgSeiTQO+JiGqP6qqgVf7Y8hUYkzjjF6I5pb6NothLznT1WEKljt89IeiJNCHoREbPgGub/EVkHxLRxxUD7hI=
-language: ruby
-rvm:
-- 2.0.0
-bundler_args: --without development --path=~/.bundle
-before_install:
-- 'echo ''gem: --no-ri --no-rdoc'' > ~/.gemrc'
-- gem install bundler bundle_cache
-- bundle_cache_install
-after_script:
-- bundle_cache
-notifications:
-  irc: "irc.freenode.net#theodi"
-deploy:
-  provider: heroku
-  api_key:
+--- 
+after_script: 
+  - bundle_cache
+after_success: 
+  - "[ \"$TRAVIS_BRANCH\" == \"master\" ] && curl -v -X DELETE -u $GITHUB_USER:$GITHUB_PASSWORD \"https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs/tags/CURRENT\""
+  - "[ \"$TRAVIS_BRANCH\" == \"master\" ] && curl -v -X POST -d '{\"ref\":\"refs/tags/CURRENT\",\"sha\":\"'$TRAVIS_COMMIT'\"}' --header \"Content-Type:application/json\" -u $GITHUB_USER:$GITHUB_PASSWORD \"https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs\""
+before_install: 
+  - "echo 'gem: --no-ri --no-rdoc' > ~/.gemrc"
+  - "gem install bundler bundle_cache"
+  - bundle_cache_install
+branches: 
+  except: 
+    - CURRENT
+bundler_args: "--without development --path=~/.bundle"
+deploy: 
+  api_key: 
     secure: ee3jSrBVMbeyZgGdjUXtO9EEKpyNKTpUPhDfAA3VTeuSBTfSudj8K5oDCdISx4GmvPQqCSatGKnrvXMrde9ldwc+QqidS4ruXmrlr2yBhk6rPHKdNeF2FX6xvBn13A/ckQeeE7xJSIyzO5aR+xsM3SL+jFmnaoRwa9sdlBSgC8w=
   app: forkbomb
-  on:
+  provider: heroku
+  true: 
     repo: theodi/forkbomb
-branches:
-  except:
-    - CURRENT
+env: 
+  global: 
+    - BUNDLE_ARCHIVE="forkbomb"
+    - AWS_S3_BUCKET="theodi-travis-bundle-cache"
+    - AWS_S3_REGION="eu-west-1"
+    - RAILS_ENV=test
+    - 
+      secure: AgvXTDZdkWlbZ+hXYz/vwzZijN3Ss3zk5v889GqAbQVKBJoBqB24PjU4rf6/nCczxXPAYeZf6Blx6hkmLE9Wl/kBH6EhEkJFbi56MAM2kmskO7+gtWaFRv6olkXe3RPHN6rfU2bEmF+D7U/XsjzVDYgPZLRfe8bpYyiLcakct1Y=
+    - 
+      secure: KXYMCHWpbkfdIo25rfsq4DFyqBbSFaSXW1DYSpWhYA0rGxjZVdQ2l+1y0yqP9HCf1wrjYTJZfb5c35khKBBWPFzRas3HAqh6LGx/TynbVV7SjyiR2gmM1q3WBUiH2qCqJUoGgnY+0RCpPwKuYJNBHfcsZ7mBbnUOepcbkSqNl6U=
+    - 
+      secure: RvFgRVnmls0mJx/szHgroW2W9nmXGPTl8U6D6GA9lqNh+dmXYkFLY+WlZT3hnW5twrAw+mJgoLBJBXPVWDluFVrVClIdePk4bXfJOE3+lfvSVAYlntLXBJAeQGgmII5VLmBfzXApXK9OugCdADvmqj7K9BWZGvx67VTD+bZtp8U=
+    - 
+      secure: ZGjK2q+H+ZosqWS57hVB1WVcizfx9UxFE8nsmIAJMXpd3e+5OhZrR1KynFgV6fmqSr5A5edMSRs37Xl0TYC4ZtvPSCI1b1lIFbhrId9WoCOYLxmw/rbpl7+mmCw/HX426sFh5AiwFiUUwbOlm9BDSxw1vdM2IFaX7CMCkWz4GGU=
+    - 
+      secure: On5VLTv3O1ERkyzLzVC+iZVfUR44XwmJ3kLKLk8jh+48p0vhf0RGlRpwQRIqctpCYdXvZyLnOr5XbgbJ36G/daOY2/1aahI/1W786Vq2t0URFg8L/Ut2sBVqrN/ay1IUP6fOErd1yvm+J8+hajMVDFp6P1TVL4WX5tO5UTLbRDY=
+    - 
+      secure: bsxNCCsPgg7qHqSf0Zu22V015ghMvoFn9CLYNzmAsr8YtEp4EvxR4EUEAJk2qFKPJTqiE+k8gQ/dU2v0EKnFjqXgSeiTQO+JiGqP6qqgVf7Y8hUYkzjjF6I5pb6NothLznT1WEKljt89IeiJNCHoREbPgGub/EVkHxLRxxUD7hI=
+language: ruby
+notifications: 
+  irc: "irc.freenode.net#theodi"
+rvm: 
+  - "2.0.0"
