--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,5 @@ notifications:
       - "irc.freenode.net#theodi"
     template:
       - "%{repository} %{branch} - %{message} %{build_url}"
+    on_success: change
+    on_failure: always
