Use new bundle caching style

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+cache: bundler
 after_success:
 - '[ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ] && curl -v -X DELETE -u $GITHUB_USER:$GITHUB_PASSWORD
   "https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs/tags/CURRENT"'
@@ -5,9 +7,6 @@ after_success:
   --header "Content-Type:application/json" -u $GITHUB_USER:$GITHUB_PASSWORD "https://api.github.com/repos/$TRAVIS_REPO_SLUG/git/refs"'
 env:
   global:
-  - BUNDLE_ARCHIVE="forkbomb"
-  - AWS_S3_BUCKET="theodi-travis-bundle-cache"
-  - AWS_S3_REGION="eu-west-1"
   - RAILS_ENV=test
   - secure: AgvXTDZdkWlbZ+hXYz/vwzZijN3Ss3zk5v889GqAbQVKBJoBqB24PjU4rf6/nCczxXPAYeZf6Blx6hkmLE9Wl/kBH6EhEkJFbi56MAM2kmskO7+gtWaFRv6olkXe3RPHN6rfU2bEmF+D7U/XsjzVDYgPZLRfe8bpYyiLcakct1Y=
   - secure: KXYMCHWpbkfdIo25rfsq4DFyqBbSFaSXW1DYSpWhYA0rGxjZVdQ2l+1y0yqP9HCf1wrjYTJZfb5c35khKBBWPFzRas3HAqh6LGx/TynbVV7SjyiR2gmM1q3WBUiH2qCqJUoGgnY+0RCpPwKuYJNBHfcsZ7mBbnUOepcbkSqNl6U=
@@ -18,13 +17,6 @@ env:
 language: ruby
 rvm:
 - 2.1.4
-bundler_args: --without development --path=~/.bundle
-before_install:
-- 'echo ''gem: --no-ri --no-rdoc'' > ~/.gemrc'
-- gem install bundler bundle_cache
-- bundle_cache_install
-after_script:
-- bundle_cache
 notifications:
   irc:
     channels:
